--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,5 +29,11 @@ dependencies {
     compile 'com.android.support:support-v4:23.1.1'
     compile 'com.android.support:recyclerview-v7:23.1.1'
     compile 'com.android.support:cardview-v7:23.1.1'
-
+    compile 'com.squareup.retrofit:retrofit:1.9.0'
+    compile 'com.jakewharton:butterknife:7.0.1'
+    compile 'com.squareup.picasso:picasso:2.5.2'
+    compile 'me.relex:circleindicator:1.1.5@aar'
+    compile 'com.oguzdev:CircularFloatingActionMenu:1.0.2'
+    compile 'com.makeramen:roundedimageview:2.2.1'
+    compile 'com.github.bumptech.glide:glide:3.6.1'
 }
